1. Сделать систему регистрации с именем пользователя и емейлом, а так же возрастом и полом. 2. сделать создание пользователей в автозаполнении базы данных в инициализаторе ( Admin и если хотите другие ), и создать необходимые роли 3. На главной странице вывести информацию по пользователю. Логин, возраст, пол. и приветствие ему. А так же является ли он админом сайта. 4. сделать так что бы новые сообщения мог добавлять только админ ( и к странице, и к ссылке ) 5. добавить пользователя в комментарии и сообщения ( и выводить их ) 6. комментарии может редактировать только тот пользователь который их написал или админ

--- a/AspNet/AspNet.csproj
+++ b/AspNet/AspNet.csproj
@@ -249,6 +249,7 @@
     <Content Include="Views\Replies\Create.cshtml" />
     <Content Include="Views\Replies\Delete.cshtml" />
     <Content Include="Views\Replies\Edit.cshtml" />
+    <Content Include="Views\Shared\_userPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
